--- a/Certification App/Src/EditorState/Responsive Approval Status Screen.editorstate.json
+++ b/Certification App/Src/EditorState/Responsive Approval Status Screen.editorstate.json
@@ -1332,7 +1332,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_115",
-      "ParentIndex": 10,
+      "ParentIndex": 0,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -1757,7 +1757,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_116",
-      "ParentIndex": 17,
+      "ParentIndex": 7,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -2182,7 +2182,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_117",
-      "ParentIndex": 25,
+      "ParentIndex": 19,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -2607,7 +2607,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_205",
-      "ParentIndex": 10,
+      "ParentIndex": 0,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -3018,7 +3018,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_206",
-      "ParentIndex": 17,
+      "ParentIndex": 7,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -3833,7 +3833,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "AdminDashboard_208",
-      "ParentIndex": 25,
+      "ParentIndex": 19,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -21481,7 +21481,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_153",
-      "ParentIndex": 16,
+      "ParentIndex": 6,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -21892,7 +21892,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_154",
-      "ParentIndex": 22,
+      "ParentIndex": 15,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -22303,7 +22303,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_155",
-      "ParentIndex": 26,
+      "ParentIndex": 23,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -22714,7 +22714,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_84",
-      "ParentIndex": 16,
+      "ParentIndex": 6,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -23132,7 +23132,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_85",
-      "ParentIndex": 22,
+      "ParentIndex": 15,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -23550,7 +23550,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "DownloadForm_86",
-      "ParentIndex": 26,
+      "ParentIndex": 23,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -25047,7 +25047,14 @@
           "IsLockable": false,
           "NameMapSourceSchema": "?"
         },
-        "X",
+        {
+          "AFDDataSourceName": "",
+          "AutoRuleBindingEnabled": false,
+          "AutoRuleBindingString": "",
+          "InvariantPropertyName": "X",
+          "IsLockable": false,
+          "NameMapSourceSchema": "?"
+        },
         "Y",
         "ZIndex",
         {
@@ -26267,7 +26274,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon11_27",
-      "ParentIndex": 11,
+      "ParentIndex": 1,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -26514,7 +26521,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon11_50",
-      "ParentIndex": 11,
+      "ParentIndex": 1,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -26747,7 +26754,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon12_17",
-      "ParentIndex": 20,
+      "ParentIndex": 11,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -29141,7 +29148,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon13_16",
-      "ParentIndex": 15,
+      "ParentIndex": 5,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -30120,7 +30127,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon22_27",
-      "ParentIndex": 19,
+      "ParentIndex": 10,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -30374,7 +30381,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon22_50",
-      "ParentIndex": 19,
+      "ParentIndex": 10,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -30628,7 +30635,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon23_27",
-      "ParentIndex": 24,
+      "ParentIndex": 17,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -30875,7 +30882,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon23_50",
-      "ParentIndex": 24,
+      "ParentIndex": 17,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -31122,7 +31129,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon29_27",
-      "ParentIndex": 14,
+      "ParentIndex": 4,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -31376,7 +31383,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon29_50",
-      "ParentIndex": 14,
+      "ParentIndex": 4,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -31616,7 +31623,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon32_27",
-      "ParentIndex": 2,
+      "ParentIndex": 12,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -31856,7 +31863,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon32_50",
-      "ParentIndex": 3,
+      "ParentIndex": 12,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -32308,7 +32315,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon5_8",
-      "ParentIndex": 20,
+      "ParentIndex": 11,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -32527,7 +32534,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Icon6_8",
-      "ParentIndex": 15,
+      "ParentIndex": 5,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -33901,7 +33908,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image12_27",
-      "ParentIndex": 1,
+      "ParentIndex": 21,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -34135,7 +34142,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image12_52",
-      "ParentIndex": 1,
+      "ParentIndex": 21,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -35259,7 +35266,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image5_40",
-      "ParentIndex": 12,
+      "ParentIndex": 2,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -35495,7 +35502,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image5_41",
-      "ParentIndex": 23,
+      "ParentIndex": 16,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -35724,7 +35731,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image5_86",
-      "ParentIndex": 12,
+      "ParentIndex": 2,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -35960,7 +35967,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image5_87",
-      "ParentIndex": 23,
+      "ParentIndex": 16,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -36203,7 +36210,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image6_27",
-      "ParentIndex": 18,
+      "ParentIndex": 9,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -36446,7 +36453,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image6_50",
-      "ParentIndex": 18,
+      "ParentIndex": 9,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -36689,7 +36696,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image7_100",
-      "ParentIndex": 21,
+      "ParentIndex": 13,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -36932,7 +36939,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image7_101",
-      "ParentIndex": 4,
+      "ParentIndex": 18,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -37487,7 +37494,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image7_51",
-      "ParentIndex": 4,
+      "ParentIndex": 18,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -37730,7 +37737,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image7_52",
-      "ParentIndex": 21,
+      "ParentIndex": 13,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -37966,7 +37973,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image8_29",
-      "ParentIndex": 3,
+      "ParentIndex": 24,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -38474,7 +38481,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image8_54",
-      "ParentIndex": 2,
+      "ParentIndex": 24,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -39027,7 +39034,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image9_27",
-      "ParentIndex": 0,
+      "ParentIndex": 26,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -39256,7 +39263,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "Image9_50",
-      "ParentIndex": 0,
+      "ParentIndex": 26,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -42305,7 +42312,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -42616,7 +42623,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -45445,7 +45452,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -46052,7 +46059,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -46349,7 +46356,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -46639,7 +46646,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -47799,7 +47806,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -48386,7 +48393,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -50510,7 +50517,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -54439,7 +54446,14 @@
         "PressedFill",
         "HoverFill",
         "Font",
-        "FontWeight",
+        {
+          "AFDDataSourceName": "",
+          "AutoRuleBindingEnabled": false,
+          "AutoRuleBindingString": "",
+          "InvariantPropertyName": "FontWeight",
+          "IsLockable": false,
+          "NameMapSourceSchema": "?"
+        },
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
@@ -55067,7 +55081,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "13",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Size",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
@@ -56992,7 +57006,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_138",
-      "ParentIndex": 5,
+      "ParentIndex": 14,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -57410,7 +57424,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_139",
-      "ParentIndex": 6,
+      "ParentIndex": 22,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -57836,7 +57850,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_140",
-      "ParentIndex": 7,
+      "ParentIndex": 25,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -58245,7 +58259,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_141",
-      "ParentIndex": 9,
+      "ParentIndex": 20,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -58656,7 +58670,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_142",
-      "ParentIndex": 13,
+      "ParentIndex": 3,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -59067,7 +59081,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_253",
-      "ParentIndex": 13,
+      "ParentIndex": 3,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -59478,7 +59492,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_254",
-      "ParentIndex": 5,
+      "ParentIndex": 14,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -59875,7 +59889,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_255",
-      "ParentIndex": 9,
+      "ParentIndex": 20,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -60286,7 +60300,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_256",
-      "ParentIndex": 6,
+      "ParentIndex": 22,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -60705,7 +60719,7 @@
       "LayoutName": "",
       "MetaDataIDKey": "",
       "Name": "NewCertificationRequest_257",
-      "ParentIndex": 7,
+      "ParentIndex": 25,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
