--- a/Certification App/Src/External reimbursement status.fx.yaml
+++ b/Certification App/Src/External reimbursement status.fx.yaml
@@ -1847,7 +1847,7 @@
                                 HintText: ="Enter your Full name"
                                 HoverFill: =RGBA(255, 255, 255, 1)
                                 PaddingLeft: =5
-                                Size: =11
+                                Size: =10
                                 Width: =310
                                 X: =337
                                 Y: =75
@@ -1874,7 +1874,7 @@
                                 HintText: ="Enter your Exam code"
                                 HoverFill: =RGBA(255, 255, 255, 1)
                                 PaddingLeft: =5
-                                Size: =11
+                                Size: =10
                                 Width: =310
                                 X: =337
                                 Y: =115
@@ -1900,7 +1900,7 @@
                                 FocusedBorderThickness: =2
                                 Height: =30
                                 Items: =["Beginner","Intermediate","Advanced"]
-                                Size: =11
+                                Size: =10
                                 Width: =310
                                 X: =337
                                 Y: =155
@@ -1927,7 +1927,7 @@
                                 HintText: ="Enter your Certification Name"
                                 HoverFill: =RGBA(255, 255, 255, 1)
                                 PaddingLeft: =5
-                                Size: =11
+                                Size: =10
                                 Width: =310
                                 X: =337
                                 Y: =195
@@ -1953,7 +1953,7 @@
                                 IconBackground: =RGBA(0,0,0,1)
                                 PaddingLeft: =5
                                 PaddingTop: =5
-                                Size: =11
+                                Size: =10
                                 Width: =310
                                 X: =337
                                 Y: =235
@@ -1962,7 +1962,6 @@
                             Label103 As label:
                                 Align: =Align.Center
                                 Fill: =RGBA(255, 232, 231, 1)
-                                FontWeight: =FontWeight.Semibold
                                 Size: =12
                                 Text: ="External Certification Details"
                                 Width: =442
@@ -2027,7 +2026,7 @@
                                 HintText: ="Enter price of certification"
                                 HoverFill: =RGBA(255, 255, 255, 1)
                                 PaddingLeft: =95
-                                Size: =11
+                                Size: =10
                                 Width: =310
                                 X: =332
                                 Y: =4
@@ -2054,7 +2053,7 @@
                                 HintText: ="Enter your Provider Name"
                                 HoverFill: =RGBA(255, 255, 255, 1)
                                 PaddingLeft: =5
-                                Size: =11
+                                Size: =10
                                 Tooltip: ="Certification Company Name"
                                 Width: =310
                                 X: =332
@@ -2082,7 +2081,7 @@
                                 HintText: ="Enter Certification Technology"
                                 HoverFill: =RGBA(255, 255, 255, 1)
                                 PaddingLeft: =5
-                                Size: =11
+                                Size: =10
                                 Width: =310
                                 X: =332
                                 Y: =84
@@ -2108,7 +2107,7 @@
                                 HintText: ="Enter Role"
                                 HoverFill: =RGBA(255, 255, 255, 1)
                                 PaddingLeft: =5
-                                Size: =11
+                                Size: =10
                                 Tooltip: ="Development Name of Certification"
                                 Width: =310
                                 X: =332
@@ -2136,7 +2135,7 @@
                                 FocusedBorderThickness: =2
                                 Height: =30
                                 Items: =Sort('BU-List',Title,SortOrder.Ascending)
-                                Size: =11
+                                Size: =10
                                 Width: =310
                                 X: =332
                                 Y: =164
@@ -2206,6 +2205,7 @@
                                 Layout: =Layout.Horizontal
                                 LineHeight: =1.8
                                 RadioBorderColor: =RGBA(0, 0, 0, 1)
+                                RadioSize: =25
                                 Size: =9
                                 Width: =310
                                 X: =327
